add map and others views

--- a/looker-app/src/views/_index.scss
+++ b/looker-app/src/views/_index.scss
@@ -7,3 +7,4 @@
 @forward "./places/places";
 @forward "./products/products";
 @forward "./categories/categories";
+@forward "./suggestions/suggestions";
