--- a/looker-app/src/layouts/mainLayout/components/sideBar/_sideBar.scss
+++ b/looker-app/src/layouts/mainLayout/components/sideBar/_sideBar.scss
@@ -33,6 +33,9 @@
             height: calc(100% - 73px);
             &-logo{
                 text-align: center;
+                img{
+                    width: 100px;
+                }
             }
             &-navlist{
                 margin-top: 55px;
@@ -273,6 +276,9 @@
     padding: 19px 13px 29px;
     .sidebar__content-menu-logo{
         overflow: hidden;
+        img{
+            width: 49px !important;
+        }
     }
     .link{
         span{
