--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -115,3 +115,12 @@
 .refuse{
     color: red;
 }
+
+.isEmpty{
+    text-align: center;
+    margin-top: 50px;
+    color: #91939A;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
