--- a/src/views/login/_login.scss
+++ b/src/views/login/_login.scss
@@ -13,6 +13,9 @@
         position: absolute;
         margin: 0 auto;
         margin-top: 33px;
+        img{
+            width: 150px;
+        }
     }
     &__container{
         max-width: 435px;
