add suggestions view

--- a/src/layouts/mainLayout/components/header/_header.scss
+++ b/src/layouts/mainLayout/components/header/_header.scss
@@ -28,6 +28,7 @@
                 }
             }
             .logout{
+                z-index: 10;
                 position: absolute;
                 bottom: 0;
                 left: 0;
